# starter

./: .gitignore  lazy-lock.json
lua/: chadrc.lua  mappings.lua
lua/configs/: lspconfig.lua  rustconf.lua
lua/plugins/: init.lua
rs-test/: Cargo.toml
rs-test/src/: main.rs
